with JPA UserRepository mysql connectivity and  data from users table.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=spring-security-phase1
+spring.datasource.url=jdbc:mysql://192.168.4.51:3306/ck_31?useSSL=false
+spring.datasource.username=appuser
+spring.datasource.password=Appuser*18
+# use existing database and don't wipe of the schema
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
